--- a/css/index.css
+++ b/css/index.css
@@ -146,13 +146,31 @@ h5 {
 h1 {
   font-size: 4rem;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: calc(290%);
+    font-weight: bold;
+  }
+}
 h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
 }
+@media (max-width: 500px) {
+  h2 {
+    font-size: calc(290%);
+    font-weight: bold;
+  }
+}
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
+}
+@media (max-width: 500px) {
+  h4 {
+    font-size: 2.3rem;
+    font-weight: bold;
+  }
 }
 p {
   line-height: 1.5;
@@ -168,6 +186,60 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+header {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 500px) {
+  header {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+}
+header nav {
+  padding: 1%;
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+}
+header nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.4rem;
+}
+header nav a:hover {
+  opacity: 50%;
+}
+@media (max-width: 500px) {
+  header {
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    height: 80px;
+  }
+  header nav {
+    width: 100%;
+  }
+}
+#borderambigdumb {
+  border-bottom: 2px dashed silver;
+  width: 100%;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +250,21 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .content-head {
+  border-bottom: 2px dashed silver;
+}
+.home .content-head div {
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+@media (max-width: 500px) {
+  .home .content-head div {
+    margin: 5% 0 3% 0;
+  }
+  .home .content-head div h1 {
+    margin: 2% 0;
+  }
 }
 .home .content-section {
   margin: 30px 0;
@@ -196,6 +283,19 @@ img {
 .home .content-section .img-content img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-flow: column wrap;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    margin: 2% 0;
+  }
+}
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
@@ -207,6 +307,11 @@ img {
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .content-destination {
   width: 75%;
@@ -224,4 +329,42 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .btn {
+  border: 1px solid silver;
+  display: flex;
+  background-color: teal;
+  margin: 0 10px 20px;
+  width: 180px;
+  height: 45px;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.6rem;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .home .content-pick .destination {
+    width: 80%;
+  }
+  .home .content-pick .btn {
+    border: 1px solid silver;
+    display: flex;
+    background-color: teal;
+    margin: 0 10px 20px;
+    width: 100%;
+    height: 45px;
+    border-radius: 10px;
+    color: white;
+    font-size: 1.6rem;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+  }
 }
