--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,19 @@
 .home {
-
+  .content-head {
+    border-bottom: 2px dashed silver;
+    div {
+      margin-top: 3%;
+      margin-bottom: 2%;
+    }
+    @media@mobile {
+      div {
+        margin: 5% 0 3% 0;
+        h1 {
+          margin: 2% 0;
+        }
+      }
+    }
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -21,6 +35,17 @@
         border-radius: 10px;
       }
     }
+    @media@mobile {
+      display: flex;
+      flex-flow: column wrap;
+      .text-content {
+        width: 100%;
+      }
+      .img-content {
+        width: 100%;
+        margin: 2% 0;
+      }
+    }
   }
 
   .inverse-content {
@@ -35,6 +60,9 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+    }
+    @media@mobile {
+      flex-direction: column-reverse;
     }
   }
 
@@ -56,6 +84,20 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    }
+    .btn {
+      .btnStyles();
+    }
+    @media@mobile {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      .destination {
+        width: 80%;
+      }
+      .btn {
+        .btnStyles(@width:100%)
+      }
     }
   }
 }// home
