--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
-// Navigation Styles here
+header {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 10vh;
+    nav {
+        padding: 1%;
+        width: 40%;
+        display: flex;
+        justify-content: space-around;
+        a {
+            color: black;
+            text-decoration: none;
+            font-size: 1.4rem;
+        }
+        a:hover {
+            opacity: 50%;
+        }
+    }
+    @media@mobile {
+        flex-flow: column nowrap;
+        justify-content: space-around;
+        height: 80px;
+        nav {
+            width: 100%;
+        }
+    }
+}
+#borderambigdumb {
+    border-bottom: 2px dashed silver;
+    width: 100%;
+}
